fixes for navbar spacing and button colors

--- a/tapas_redesign/assets/sass/navbar.scss
+++ b/tapas_redesign/assets/sass/navbar.scss
@@ -13,3 +13,26 @@
 #admin-menu {
   z-index:1043;
 }
+
+
+/*fix for searchbox in nav*/
+.region-navigation{
+  @extend .navbar-form;
+  #block-search-form {
+    margin: 1px 0px 2px 5px;
+  }
+  .input-group-btn{
+    button{
+      @extend .btn-info;
+    }
+  }
+}
+
+/*fix for sign in button*/
+.navbar-nav.secondary{
+  .first.last.leaf{
+    a {
+      @extend .btn-primary;
+    }
+  }
+}
